--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@
       <div class="graphic__prose">
         <p class="trigger one" data-step="0" style="height: 600px;"></p>
         <p class="trigger two" data-step="1" style="height: 600px;"></p>
-        <p class="trigger three" data-step="2" style="height: 600px;">To provide some historical context,
-          here are the changes in Russian presidency between 1990 and 2022</p>
-        <p class="trigger" data-step="3" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="4" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="5" style="height: 367.5px;">Step 2 arrives. The graphic should be locking into a
-          fixed position right about now. We could have a whole bunch of these “fixed” steps.</p>
-        <p class="trigger" data-step="6" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
+        <p class="trigger three" data-step="2" style="height: 600px;"></p>
+        <p class="trigger four" data-step="3" style="height: 200px;"></p>
+        <!-- <p class="trigger five" data-step="4" style="height: 600px;">Step 3 concludes our brief tour. The graphic should
+          now go back to its original in-flow position, elegantly snapping back into place.</p> -->
+        <!-- <p class="trigger" data-step="5" style="height: 367.5px;">Step 2 arrives. The graphic should be locking into a
+          fixed position right about now. We could have a whole bunch of these “fixed” steps.</p> -->
+        <!-- <p class="trigger" data-step="6" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
+          now go back to its original in-flow position, elegantly snapping back into place.</p> -->
       </div>
     </div>
 
@@ -76,22 +74,17 @@
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <p class="trigger" data-step="0" style="height: 367.5px;">Step 1 in the graphic. It triggers in the middle of
-          the viewport. For this graphic, it is the same as the initial state so the reader doesn’t miss anything.
-          Step 3 concludes our brief tour. The graphic should now go back to its original in-flow position,
-          elegantly snapping back into place. Step 3 concludes our brief tour. The graphic shouldnow go back to its
-          original in-flow position, elegantly snapping back into place.</p>
+        <p class="trigger" data-step="0" style="height: 367.5px;">The geographic spread of Russian 
+          engagement as a third-party signatory of peace agreements reflects its permanent seat on
+          the United Nations Security Council and its role as a regional power. Like other members 
+          of the Permanent Five, Russia participates in large international conferences and in UN 
+          Security Council resolutions that function as peace agreements. However, most of its focus 
+          – and where its activity has been over the last decade – relates to conflicts in its 
+          neighbourhood and a number of select locales, where Russia is acting both as a military 
+          partner and a peacemaker. </p>
         <p class="trigger" data-step="2" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
           now go back to its original in-flow position, elegantly snapping back into place.</p>
         <p class="trigger" data-step="3" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="4" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="5" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="6" style="height: 367.5px;">Step 2 arrives. The graphic should be locking into a
-          fixed position right about now. We could have a whole bunch of these “fixed” steps.</p>
-        <p class="trigger" data-step="7" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
           now go back to its original in-flow position, elegantly snapping back into place.</p>
       </div>
     </div>
