--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div id="separator">
+    <!-- <div id="separator">
       <div id="vik">Есть, видимо, какое-то странное соответствие между общим рисунком жизни и теми мелкими
         историями, которые постоянно происходят с человеком и которым он не придает значения. Сейчас я ясно вижу, что
         моя судьба уже вполне четко определилась в то время, когда я
@@ -105,7 +105,7 @@
       <div id="vik">
         <img id="mage" src="/img/viktor.jpg" />
       </div>
-    </div>
+    </div> -->
 
   </div>
   <script src="js/countries.js"></script>
