--- a/index.html
+++ b/index.html
@@ -74,38 +74,36 @@
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <p class="trigger" data-step="0" style="height: 367.5px;">The geographic spread of Russian 
+        <p class="trigger" data-step="0" style="height: 600px;">The geographic spread of Russian
           engagement as a third-party signatory of peace agreements reflects its permanent seat on
-          the United Nations Security Council and its role as a regional power. Like other members 
-          of the Permanent Five, Russia participates in large international conferences and in UN 
-          Security Council resolutions that function as peace agreements. However, most of its focus 
-          – and where its activity has been over the last decade – relates to conflicts in its 
-          neighbourhood and a number of select locales, where Russia is acting both as a military 
+          the United Nations Security Council and its role as a regional power. Like other members
+          of the Permanent Five, Russia participates in large international conferences and in UN
+          Security Council resolutions that function as peace agreements. </p>
+        <p class="trigger" data-step="2" style="height: 600px;">However, most of its focus
+          – and where its activity has been over the last decade – relates to conflicts in its
+          neighbourhood and a number of select locales, where Russia is acting both as a military
           partner and a peacemaker. </p>
-        <p class="trigger" data-step="2" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
-        <p class="trigger" data-step="3" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p>
       </div>
     </div>
+    <div id="break"></div>
 
-    <!-- <div id="separator">
-      <div id="vik">Есть, видимо, какое-то странное соответствие между общим рисунком жизни и теми мелкими
-        историями, которые постоянно происходят с человеком и которым он не придает значения. Сейчас я ясно вижу, что
-        моя судьба уже вполне четко определилась в то время, когда я
-        еще даже не задумывался всерьез над тем, какой бы я хотел ее видеть, и больше того – уже
-        тогда она была мне показана в несколько упрощенном виде. Может быть, это было эхо будущего. А может быть, то,
-        что мы принимаем за эхо будущего, – на самом деле семя этого будущего, падающее в почву в тот самый момент,
-        который потом, издали, кажется прилетавшим
-        из будущего эхом. Короче, лето после седьмого класса было жарким и пыльным. Из его первой половины
-        мне запомнились только долгие велосипедные прогулки по одному из подмосковных шоссе.
-        На заднее колесо своего полугоночного «Спорта» я ставил специальную трещотку из куска
-        сложенной в несколько раз плотной бумаги, прикрепленной к раме прищепкой, – когда я ехал,
+    <div id="separator1">
+      <div style="position: absolute; top: 100px; width: 100%; text-align: center;">
+        <h2>Read our research on Russia and its approaches to conflict, peace processes and mediation:</h2>
       </div>
       <div id="vik">
-        <img id="mage" src="/img/viktor.jpg" />
+        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img id="mage" src="/img/mateja1.PNG" /></a>
       </div>
-    </div> -->
+      <div id="vik">
+        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/" target="_blank"><img id="mage" src="/img/mateja2.PNG" /></a>
+      </div>
+      <div id="vik">
+        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415" target="_blank"><img id="mage" src="/img/mateja3.PNG" /></a>
+      </div>
+      <div id="vik">
+        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage" src="/img/mateja4.PNG" /></a>
+      </div>
+    </div>
 
   </div>
   <script src="js/countries.js"></script>
