--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
         <h3>Read our research on Russia and its approaches to conflict, peace processes and mediation:</h3>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img id="mage" src="/img/mateja1.PNG" /></a>
+        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img id="mage" src="img/mateja1.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/" target="_blank"><img id="mage" src="/img/mateja2.PNG" /></a>
+        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/" target="_blank"><img id="mage" src="img/mateja2.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415" target="_blank"><img id="mage" src="/img/mateja3.PNG" /></a>
+        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415" target="_blank"><img id="mage" src="img/mateja3.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage" src="/img/mateja4.PNG" /></a>
+        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage" src="img/mateja4.PNG" /></a>
       </div>
     </div>
 
