--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 id="num_agt"></h1> Agreements
       </div>
       <div id="ch1_div">
-        <h1 id="num_act"></h1> Other Actors
+        <h1 id="num_act"></h1> Co-Signatories 
       </div>
       <div id="ch1_div">
         <h1 id="yr_active"></h1> Activity Range
