--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
 
   <div id="header">
     <h1 id="title_header"></h1>
-
     <img id="peace_img" src="img/logo.png" alt="PeaceRep Logo" />
   </div>
 
   <div id="story">
-    <div id="actor_dropdown">
+    <!-- <div id="actor_dropdown">
       <h4 style="margin: 5px;">Peace Actor</h4>
       <select id="dropdown_country">
         <option selected="selected">Russia</option>
         <option>United Kingdom</option>
         <option>United Nations</option>
       </select>
-    </div>
+    </div> -->
 
     <div id="separator" class="overview">
       <div id="ch1_div">
@@ -60,12 +59,24 @@
         <p class="trigger two" data-step="1" style="height: 600px;"></p>
         <p class="trigger three" data-step="2" style="height: 600px;"></p>
         <p class="trigger four" data-step="3" style="height: 200px;"></p>
-        <!-- <p class="trigger five" data-step="4" style="height: 600px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p> -->
-        <!-- <p class="trigger" data-step="5" style="height: 367.5px;">Step 2 arrives. The graphic should be locking into a
-          fixed position right about now. We could have a whole bunch of these “fixed” steps.</p> -->
-        <!-- <p class="trigger" data-step="6" style="height: 367.5px;">Step 3 concludes our brief tour. The graphic should
-          now go back to its original in-flow position, elegantly snapping back into place.</p> -->
+      </div>
+    </div>
+
+
+    <div class="graphic05">
+      <div class="graphic__vis__05">
+        <svg id="visualization05"></svg>
+      </div>
+      <div class="graphic__prose__05">
+        <p class="trigger five" data-step="4" style="height: 600px;">text</p>
+        <p class="trigger six" data-step="5" style="height: 600px;">text</p>
+        <p class="trigger seven" data-step="6" style="height: 600px;">text</p>
+      </div>
+    </div>
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+       Geography 
       </div>
     </div>
 
@@ -74,12 +85,12 @@
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <p class="trigger" data-step="0" style="height: 600px;">The geographic spread of Russian
+        <p class="trigger eight" data-step="7" style="height: 600px;">The geographic spread of Russian
           engagement as a third-party signatory of peace agreements reflects its permanent seat on
           the United Nations Security Council and its role as a regional power. Like other members
           of the Permanent Five, Russia participates in large international conferences and in UN
           Security Council resolutions that function as peace agreements. </p>
-        <p class="trigger" data-step="2" style="height: 600px;">However, most of its focus
+        <p class="trigger nine" data-step="8" style="height: 600px;">However, most of its focus
           – and where its activity has been over the last decade – relates to conflicts in its
           neighbourhood and a number of select locales, where Russia is acting both as a military
           partner and a peacemaker. </p>
