--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1 id="num_agt"></h1> Agreements
       </div>
       <div id="ch1_div">
-        <h1 id="num_act"></h1> Co-Signatories 
+        <h1 id="num_act"></h1> Co-Signatories
       </div>
       <div id="ch1_div">
         <h1 id="yr_active"></h1> Activity Range
@@ -55,10 +55,24 @@
         <svg id="visualization"></svg>
       </div>
       <div class="graphic__prose">
-        <p class="trigger one" data-step="0" style="height: 600px;"></p>
-        <p class="trigger two" data-step="1" style="height: 600px;"></p>
-        <p class="trigger three" data-step="2" style="height: 600px;"></p>
-        <p class="trigger four" data-step="3" style="height: 200px;"></p>
+        <div class="trigger one" data-step="0">
+          <p class="p1"></p>
+        </div>
+        <div class="trigger two" data-step="1">
+          <p class="p2"></p>
+        </div>
+        <div class="trigger three" data-step="2">
+          <p class="p3"></p>
+        </div>
+        <div class="trigger four" data-step="3" style="height: 250px;">
+          <p class="p4" style="background-color: rgba(0, 0, 0, 0)"></p>
+        </div>
+      </div>
+    </div>
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+        Agreement Types
       </div>
     </div>
 
@@ -68,15 +82,44 @@
         <svg id="visualization05"></svg>
       </div>
       <div class="graphic__prose__05">
-        <p class="trigger five" data-step="4" style="height: 600px;">text</p>
-        <p class="trigger six" data-step="5" style="height: 600px;">text</p>
-        <p class="trigger seven" data-step="6" style="height: 600px;">text</p>
+        <div class="trigger five" data-step="4">
+          <p class="p5"></p>
+        </div>
+        <div class="trigger six" data-step="5">
+          <p class="p6">text</p>
+        </div>
+        <div class="trigger seven" data-step="6">
+          <p class="p7">text</p>
+        </div>
       </div>
     </div>
 
     <div id="separator05" class="overview">
       <div id="ch2_div">
-       Geography 
+        Agreement Timeline
+      </div>
+    </div>
+
+    <div class="graphic075">
+      <div class="graphic__vis__075">
+        <svg id="visualization075"></svg>
+      </div>
+      <div class="graphic__prose__075">
+        <div class="trigger eight" data-step="7">
+          <p>text</p>
+        </div>
+        <div class="trigger nine" data-step="8">
+          <p>text</p>
+        </div>
+        <div class="trigger ten" data-step="9">
+          <p>text</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+        Geography
       </div>
     </div>
 
@@ -85,12 +128,12 @@
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <p class="trigger eight" data-step="7" style="height: 600px;">The geographic spread of Russian
+        <p class="trigger eleven" data-step="10" style="height: 600px;">The geographic spread of Russian
           engagement as a third-party signatory of peace agreements reflects its permanent seat on
           the United Nations Security Council and its role as a regional power. Like other members
           of the Permanent Five, Russia participates in large international conferences and in UN
           Security Council resolutions that function as peace agreements. </p>
-        <p class="trigger nine" data-step="8" style="height: 600px;">However, most of its focus
+        <p class="trigger twelve" data-step="11" style="height: 600px;">However, most of its focus
           – and where its activity has been over the last decade – relates to conflicts in its
           neighbourhood and a number of select locales, where Russia is acting both as a military
           partner and a peacemaker. </p>
@@ -103,16 +146,20 @@
         <h3>Read our research on Russia and its approaches to conflict, peace processes and mediation:</h3>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img id="mage" src="img/mateja1.PNG" /></a>
+        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img
+            id="mage" src="img/mateja1.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/" target="_blank"><img id="mage" src="img/mateja2.PNG" /></a>
+        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/"
+          target="_blank"><img id="mage" src="img/mateja2.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415" target="_blank"><img id="mage" src="img/mateja3.PNG" /></a>
+        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415"
+          target="_blank"><img id="mage" src="img/mateja3.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage" src="img/mateja4.PNG" /></a>
+        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage"
+            src="img/mateja4.PNG" /></a>
       </div>
     </div>
 
