pluggin in russia and china

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
   </div>
 
   <div id="story">
-    <!-- <div id="actor_dropdown">
+    <div id="actor_dropdown">
       <h4 style="margin: 5px;">Peace Actor</h4>
       <select id="dropdown_country">
         <option selected="selected">Russia</option>
         <option>United Kingdom</option>
         <option>United Nations</option>
+        <option>China</option>
       </select>
-    </div> -->
+    </div>
 
     <div id="separator" class="overview">
       <div id="ch1_div">
