--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     referrerpolicy="no-referrer"></script>
   <script src='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' />
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <link rel="icon" type="image/png" href="img/peace.png">
 </head>
 
@@ -65,7 +66,7 @@
         <div class="trigger three" data-step="2">
           <p class="p3"></p>
         </div>
-        <div class="trigger four" data-step="3" style="height: 250px;">
+        <div class="trigger four" data-step="3" >
           <p class="p4" style="background-color: rgba(0, 0, 0, 0)"></p>
         </div>
       </div>
