--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   </div>
 
   <div id="story">
-    <div id="actor_dropdown">
-      <h4 style="margin: 5px;">Peace Actor</h4>
-      <select id="dropdown_country">
-        <option selected="selected">Russia</option>
-        <option>United Kingdom</option>
-        <option>United Nations</option>
-        <option>China</option>
-      </select>
+    <div class="dropdown">
+      <button class="dropbtn">Select Actor</button>
+      <div class="dropdown-content">
+        <a href="#" id="russia">Russia</a>
+        <a href="#" id="kingdom">United Kingdom</a>
+        <a href="#" id="nations">United Nations</a>
+        <a href="#" id="china">China</a>
+      </div>
     </div>
 
     <div id="separator" class="overview">
@@ -51,6 +51,7 @@
       </div>
     </div>
 
+    <!-- beeswarm -->
     <div class="graphic">
       <div class="graphic__vis">
         <div id="hover_description"></div>
@@ -66,7 +67,7 @@
         <div class="trigger three" data-step="2">
           <p class="p3"></p>
         </div>
-        <div class="trigger four" data-step="3" >
+        <div class="trigger four" data-step="3">
           <p class="p4" style="background-color: rgba(0, 0, 0, 0)"></p>
         </div>
       </div>
@@ -74,11 +75,11 @@
 
     <div id="separator05" class="overview">
       <div id="ch2_div">
-        Agreement Types
+        Agreement Stages
       </div>
     </div>
 
-
+    <!-- donut -->
     <div class="graphic05">
       <div class="graphic__vis__05">
         <svg id="visualization05"></svg>
@@ -96,24 +97,43 @@
       </div>
     </div>
 
+    <!-- bar chart -->
+    <div class="graphic06">
+      <div class="graphic__vis__06">
+        <svg id="visualization06"></svg>
+      </div>
+      <div class="graphic__prose__06">
+        <div class="trigger eight" data-step="7">
+          <p class="p8">text</p>
+        </div>
+        <div class="trigger nine" data-step="8">
+          <p class="p9">text</p>
+        </div>
+        <div class="trigger ten" data-step="9">
+          <p class="p10">text</p>
+        </div>
+      </div>
+    </div>
+
     <div id="separator05" class="overview">
       <div id="ch2_div">
         Agreement Timeline
       </div>
     </div>
 
+    <!-- multiline -->
     <div class="graphic075">
       <div class="graphic__vis__075">
         <svg id="visualization075"></svg>
       </div>
       <div class="graphic__prose__075">
-        <div class="trigger eight" data-step="7">
+        <div class="trigger eleven" data-step="10">
           <p>text</p>
         </div>
-        <div class="trigger nine" data-step="8">
+        <div class="trigger twelve" data-step="11">
           <p>text</p>
         </div>
-        <div class="trigger ten" data-step="9">
+        <div class="trigger thirteen" data-step="12">
           <p>text</p>
         </div>
       </div>
@@ -125,20 +145,25 @@
       </div>
     </div>
 
+    <!-- map -->
     <div class="graphic1">
       <div class="graphic__vis__1">
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <p class="trigger eleven" data-step="10" style="height: 600px;">The geographic spread of Russian
-          engagement as a third-party signatory of peace agreements reflects its permanent seat on
-          the United Nations Security Council and its role as a regional power. Like other members
-          of the Permanent Five, Russia participates in large international conferences and in UN
-          Security Council resolutions that function as peace agreements. </p>
-        <p class="trigger twelve" data-step="11" style="height: 600px;">However, most of its focus
-          – and where its activity has been over the last decade – relates to conflicts in its
-          neighbourhood and a number of select locales, where Russia is acting both as a military
-          partner and a peacemaker. </p>
+        <div class="trigger fourteen" data-step="13">
+          <p>The geographic spread of Russian
+            engagement as a third-party signatory of peace agreements reflects its permanent seat on
+            the United Nations Security Council and its role as a regional power. Like other members
+            of the Permanent Five, Russia participates in large international conferences and in UN
+            Security Council resolutions that function as peace agreements.</p>
+        </div>
+        <div class="trigger fifteen" data-step="14">
+          <p>However, most of its focus
+            – and where its activity has been over the last decade – relates to conflicts in its
+            neighbourhood and a number of select locales, where Russia is acting both as a military
+            partner and a peacemaker.</p>
+        </div>
       </div>
     </div>
     <div id="break"></div>
@@ -149,18 +174,18 @@
       </div>
       <div id="vik">
         <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img
-            id="mage" src="img/mateja1.PNG" /></a>
+            id="publications" src="img/mateja1.PNG" /></a>
       </div>
       <div id="vik">
         <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/"
-          target="_blank"><img id="mage" src="img/mateja2.PNG" /></a>
+          target="_blank"><img id="publications" src="img/mateja2.PNG" /></a>
       </div>
       <div id="vik">
         <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415"
-          target="_blank"><img id="mage" src="img/mateja3.PNG" /></a>
+          target="_blank"><img id="publications" src="img/mateja3.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="mage"
+        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="publications"
             src="img/mateja4.PNG" /></a>
       </div>
     </div>
