--- a/index.html
+++ b/index.html
@@ -86,13 +86,34 @@
       </div>
       <div class="graphic__prose__05">
         <div class="trigger five" data-step="4">
-          <p class="p5"></p>
+          <p class="p5">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger six" data-step="5">
-          <p class="p6">text</p>
+          <p class="p6">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger seven" data-step="6">
-          <p class="p7">text</p>
+          <p class="p7">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
       </div>
     </div>
@@ -104,13 +125,34 @@
       </div>
       <div class="graphic__prose__06">
         <div class="trigger eight" data-step="7">
-          <p class="p8">text</p>
+          <p class="p8">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger nine" data-step="8">
-          <p class="p9">text</p>
+          <p class="p9">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger ten" data-step="9">
-          <p class="p10">text</p>
+          <p class="p10">The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
       </div>
     </div>
@@ -128,13 +170,34 @@
       </div>
       <div class="graphic__prose__075">
         <div class="trigger eleven" data-step="10">
-          <p>text</p>
+          <p>The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger twelve" data-step="11">
-          <p>text</p>
+          <p>The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
         <div class="trigger thirteen" data-step="12">
-          <p>text</p>
+          <p>The Brain—is wider than the Sky—
+            For—put them side by side—
+            The one the other will contain
+            With ease—and you—beside—
+            The Brain is deeper than the sea—
+            For—hold them—Blue to Blue—
+            The one the other will absorb—
+            As sponges—Buckets—do—</p>
         </div>
       </div>
     </div>
