--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <div id="header">
     <h1 id="title_header"></h1>
     <img id="peace_img" src="img/logo.png" alt="PeaceRep Logo" />
+    <img id="uoe_img" src="img/uoe_logo.png" alt="Uni Logo" />
+    <img id="and_img" src="img/uosa_logo.png" alt="Uni Logo" />
   </div>
 
   <div id="story">
@@ -67,8 +69,7 @@
         <div class="trigger three" data-step="2">
           <p class="p3"></p>
         </div>
-        <div class="trigger four" data-step="3">
-          <p class="p4" style="background-color: rgba(0, 0, 0, 0)"></p>
+        <div class="trigger four" data-step="3" style="height: 200px;">
         </div>
       </div>
     </div>
