--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="header">
     <h1 id="title_header"></h1>
     <img id="peace_img" src="img/logo.png" alt="PeaceRep Logo" />
-    <img id="uoe_img" src="img/uoe_logo.png" alt="Uni Logo" />
+    <img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" />
     <img id="and_img" src="img/image10.png" alt="Uni Logo" />
   </div>
 
