--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
 
+
     <div id="separator" class="overview">
       <div id="ch1_div">
         <h1 id="num_pp"></h1> Peace Processes
@@ -56,6 +57,12 @@
     <!-- beeswarm -->
     <div class="graphic">
       <div class="graphic__vis">
+        <div id="legend">
+          <span class="dot"></span>
+          <p id="leg_p">Individual peace agreements
+            signed by Russia (hover over for more detail)</p>
+        </div>
+
         <div id="hover_description"></div>
         <svg id="visualization"></svg>
       </div>
@@ -249,8 +256,8 @@
           target="_blank"><img id="publications" src="img/mateja3.PNG" /></a>
       </div>
       <div id="vik">
-        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img id="publications"
-            src="img/mateja4.PNG" /></a>
+        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img
+            id="publications" src="img/mateja4.PNG" /></a>
       </div>
     </div>
 
