--- a/index.html
+++ b/index.html
@@ -88,34 +88,14 @@
       </div>
       <div class="graphic__prose__075">
         <div class="trigger five" data-step="4">
-          <p>The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p>Russia is the most prolific signatory of
+            peace agreements of all UN Security Council Permanent Members.</p>
         </div>
         <div class="trigger six" data-step="5">
-          <p>The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p>In a number of years (1995, 2016-2018) it
+            has signed more agreements than the United Nations. </p>
         </div>
         <div class="trigger seven" data-step="6">
-          <p>The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
         </div>
       </div>
     </div>
@@ -133,38 +113,30 @@
       </div>
       <div class="graphic__prose__05">
         <div class="trigger eight" data-step="7">
-          <p class="p5">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p class="p5">Russia primarily signs pre-negotiation and
+            ceasefire agreements. These represent over half of 
+            all agreements signed.
+          </p>
         </div>
         <div class="trigger nine" data-step="8">
-          <p class="p6">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p class="p6">
+            For more details on the categories see 
+            <a href="https://www.peaceagreements.org/files/Definitions_v7.pdf" target="_blank">here</a>.
+          </p>
         </div>
         <div class="trigger ten" data-step="9">
-          <p class="p7">The Brain—is wider than the Sky—
+          <!-- <p class="p7">The Brain—is wider than the Sky—
             For—put them side by side—
             The one the other will contain
             With ease—and you—beside—
             The Brain is deeper than the sea—
             For—hold them—Blue to Blue—
             The one the other will absorb—
-            As sponges—Buckets—do—</p>
+            As sponges—Buckets—do—</p> -->
         </div>
       </div>
     </div>
-    
+
     <div id="separator05" class="overview">
       <div id="ch2_div">
         Agreement Timeline
