--- a/index.html
+++ b/index.html
@@ -57,12 +57,6 @@
     <!-- beeswarm -->
     <div class="graphic">
       <div class="graphic__vis">
-        <div id="legend">
-          <span class="dot"></span>
-          <p id="leg_p">Individual peace agreements
-            signed by Russia (hover over for more detail)</p>
-        </div>
-
         <div id="hover_description"></div>
         <svg id="visualization"></svg>
       </div>
@@ -88,15 +82,13 @@
       </div>
       <div class="graphic__prose__075">
         <div class="trigger five" data-step="4">
-          <p>Russia is the most prolific signatory of
-            peace agreements of all UN Security Council Permanent Members.</p>
+          <p class="p4"></p>
         </div>
         <div class="trigger six" data-step="5">
-          <p>In a number of years (1995, 2016-2018) it
-            has signed more agreements than the United Nations. </p>
+          <p class="p5"></p>
         </div>
-        <div class="trigger seven" data-step="6">
-        </div>
+        <!-- <div class="trigger seven" data-step="6">
+        </div> -->
       </div>
     </div>
 
@@ -113,27 +105,13 @@
       </div>
       <div class="graphic__prose__05">
         <div class="trigger eight" data-step="7">
-          <p class="p5">Russia primarily signs pre-negotiation and
-            ceasefire agreements. These represent over half of 
-            all agreements signed.
-          </p>
+          <p class="p6"></p>
         </div>
         <div class="trigger nine" data-step="8">
-          <p class="p6">
-            For more details on the categories see 
-            <a href="https://www.peaceagreements.org/files/Definitions_v7.pdf" target="_blank">here</a>.
-          </p>
+          <p class="p7"></p>
         </div>
-        <div class="trigger ten" data-step="9">
-          <!-- <p class="p7">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p> -->
-        </div>
+        <!-- <div class="trigger ten" data-step="9">
+        </div> -->
       </div>
     </div>
 
@@ -150,34 +128,16 @@
       </div>
       <div class="graphic__prose__06">
         <div class="trigger eleven" data-step="10">
-          <p class="p8">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p class="p8"></p>
         </div>
         <div class="trigger twelve" data-step="11">
-          <p class="p9">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p class="p9"></p>
         </div>
         <div class="trigger thirteen" data-step="12">
-          <p class="p10">The Brain—is wider than the Sky—
-            For—put them side by side—
-            The one the other will contain
-            With ease—and you—beside—
-            The Brain is deeper than the sea—
-            For—hold them—Blue to Blue—
-            The one the other will absorb—
-            As sponges—Buckets—do—</p>
+          <p class="p10"></p>
+        </div>
+        <div class="trigger fourteen" data-step="13">
+          <p class="p11"></p>
         </div>
       </div>
     </div>
@@ -196,22 +156,26 @@
         <div id="map"></div>
       </div>
       <div class="graphic__prose__1">
-        <div class="trigger fourteen" data-step="13">
-          <p>The geographic spread of Russian
-            engagement as a third-party signatory of peace agreements reflects its permanent seat on
-            the United Nations Security Council and its role as a regional power. Like other members
-            of the Permanent Five, Russia participates in large international conferences and in UN
-            Security Council resolutions that function as peace agreements.</p>
-        </div>
         <div class="trigger fifteen" data-step="14">
-          <p>However, most of its focus
-            – and where its activity has been over the last decade – relates to conflicts in its
-            neighbourhood and a number of select locales, where Russia is acting both as a military
-            partner and a peacemaker.</p>
+          <p class="p12"></p>
+        </div>
+        <div class="trigger sixteen" data-step="15">
+          <p13 class="p13">
+            </p>
+        </div>
+        <div class="trigger seventeen" data-step="16">
+          <p13 class="p14">
+            </p>
         </div>
       </div>
     </div>
     <div id="break"></div>
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+        Research
+      </div>
+    </div>
 
     <div id="separator1">
       <div style="position: absolute; top: 80px; width: 100%; text-align: center;">
@@ -219,19 +183,23 @@
       </div>
       <div id="vik">
         <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img
-            id="publications" src="img/mateja1.PNG" /></a>
+            id="publications" src="img/m1.png" /></a>
       </div>
       <div id="vik">
         <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/"
-          target="_blank"><img id="publications" src="img/mateja2.PNG" /></a>
+          target="_blank"><img id="publications" src="img/m2.png" /></a>
       </div>
       <div id="vik">
         <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415"
-          target="_blank"><img id="publications" src="img/mateja3.PNG" /></a>
+          target="_blank"><img id="publications" src="img/m3.png" /></a>
       </div>
       <div id="vik">
         <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img
-            id="publications" src="img/mateja4.PNG" /></a>
+            id="publications" src="img/m4.png" /></a>
+      </div>
+      <div id="vik">
+        <a href=https://peacerep.org/publication/russia-and-china-in-liberal-peacebuilding/ target="_blank"><img
+            id="publications" src="img/m5.png" /></a>
       </div>
     </div>
 
